# ScaffoldingForGramine

./: .gitignore  .pylintrc  .trivyignore  CONTRIBUTING.md  MANIFEST.in  README.rst  bandit.yaml  pyproject.toml  run-bandit  run-lintian  run-pylint  run-pytest  trivy.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.zuul.d/: jobs.yaml
.zuul.d/playbooks/build-deb/: run.yaml
.zuul.d/playbooks/build-docs/: post.yaml  run.yaml
.zuul.d/playbooks/scaffolding-example/: run.yaml
.zuul.d/playbooks/scaffolding-tests/: run.yaml
Documentation/: conf.py  configuration.rst  deployment.rst  hacking.rst  index.rst  templates.rst
Documentation/manpages/: scag-build.rst  scag-client.rst  scag-detect.rst  scag-quickstart.rst  scag-setup.rst
contrib/: cyclonedx-to-trivyignore.py
debian/: changelog  control  copyright  gramine-scaffolding-doc.docs  gramine-scaffolding.docs  gramine-scaffolding.install  gramine-scaffolding.lintian-overrides  gramine-scaffolding.manpages  gramine-scaffolding.postinst  not-installed  rules
examples/flask/: run-test
examples/flask/app/: app.py
examples/python/: run-test
graminescaffolding/: __init__.py  __main__.py  builder.py  client.py  utils.py
graminescaffolding/frameworks/common/: builder.py  toolchain.py
graminescaffolding/frameworks/dotnet/: builder.py
graminescaffolding/frameworks/flask/: builder.py
graminescaffolding/frameworks/koajs/: builder.py
graminescaffolding/frameworks/nodejs_plain/: builder.py
graminescaffolding/frameworks/python_plain/: builder.py
graminescaffolding/templates/: .dockerignore  Dockerfile  Dockerfile-final  Dockerfile-rootfs  Dockerfile.dockerignore  gramine.scaffolding.toml  scag-client.toml  scag.toml  sources.list
graminescaffolding/templates/frameworks/dotnet/: Dockerfile  app.manifest.template  dotnet.manifest.template  gramine.scaffolding.toml  scag.toml  sources.list
graminescaffolding/templates/frameworks/dotnet/example/: hello_world.cs
graminescaffolding/templates/frameworks/dotnet/mmdebstrap-hooks/: customize.sh  setup.sh
graminescaffolding/templates/frameworks/expressjs/: Dockerfile  app.manifest.template  nginx-expressjs.conf  scag.toml
graminescaffolding/templates/frameworks/expressjs/example/: index.js  package.json
graminescaffolding/templates/frameworks/flask/: Dockerfile  app.manifest.template  flask.manifest.template  nginx-uwsgi.conf
graminescaffolding/templates/frameworks/java_gradle/: Dockerfile  app.manifest.template  scag.toml
graminescaffolding/templates/frameworks/java_jar/: Dockerfile  app.manifest.template
graminescaffolding/templates/frameworks/koajs/: Dockerfile  app.manifest.template  gramine.scaffolding.toml  koajs.manifest.template  nginx-koajs.conf  scag.toml
graminescaffolding/templates/frameworks/nginx/: nginx.conf
graminescaffolding/templates/frameworks/nodejs_plain/: Dockerfile  app.manifest.template  nodejs_plain.manifest.template
graminescaffolding/templates/frameworks/python_plain/: Dockerfile  app.manifest.template  gramine.scaffolding.toml  python_plain.manifest.template  scag.toml
graminescaffolding/templates/mmdebstrap-hooks/: customize.sh  setup.sh
tests/: conftest.py  test_invalid_framework.py
tests/dotnet/: run-hadolint  run-test  test_dotnet.py
tests/expressjs/: run-hadolint  run-test
tests/flask/: run-test
tests/java_gradle/: run-test
tests/java_jar/: run-test
tests/koajs/: run-test
tests/nodejs/: run-test
tests/python/: run-test
(+13 files in other folders)
