[build-system]
requires = ["setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
name = "graminescaffolding"
version = "0a0"
authors = [
    { name = "Wojtek Porczyk", email = "woju@invisiblethingslab.com" },
    { name = "Mariusz Zaborski", email = "oshogobo@invisiblethingslab.com" },
]
readme = "README.rst"
dependencies = [
    "Jinja2",
    "click",
    "tomli",
    "tomli-w",
    "docker",
]

[project.entry-points.console_scripts]
scag-build =        "graminescaffolding.__main__:build"
scag-detect =       "graminescaffolding.__main__:_detect"
scag-setup =        "graminescaffolding.__main__:setup"
scag-quickstart =   "graminescaffolding.__main__:quickstart"
scag-client =       "graminescaffolding.__main__:client"

[project.entry-points."gramine.scaffolding.framework"]
python_plain =  "graminescaffolding.builder:PythonBuilder"
flask =         "graminescaffolding.builder:FlaskBuilder"
nodejs_plain =  "graminescaffolding.builder:NodejsBuilder"
java_jar =      "graminescaffolding.builder:JavaJARBuilder"
java_gradle =   "graminescaffolding.builder:JavaGradleBuilder"
dotnet =        "graminescaffolding.builder:DotnetBuilder"

[tool.setuptools.packages.find]
where = ["."]
include = ["graminescaffolding", "graminescaffolding.*"]
